@@ -2,12 +2,10 @@ package ru.otus.di;
 
 import com.google.inject.AbstractModule;
 import com.google.inject.Provides;
-import com.google.inject.Singleton;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.util.ArrayList;
+import java.net.URL;
+import java.time.Duration;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
@@ -17,38 +15,40 @@ public class DriverModule extends AbstractModule {
 
   @Override
   protected void configure() {
-
+    // No bindings needed
   }
 
   @Provides
-  @Singleton
   public WebDriver provideWebDriver() throws MalformedURLException {
     boolean isMobile = Boolean.parseBoolean(System.getProperty("device", "false"));
 
-    // ✅ Ստեղծում ենք selenoid:options map
+    ChromeOptions options = new ChromeOptions();
+    options.setCapability("browserVersion", "115.0");
+    options.setCapability("pageLoadStrategy", "eager");
+
     Map<String, Object> selenoidOptions = new HashMap<>();
     selenoidOptions.put("enableVNC", true);
     selenoidOptions.put("enableVideo", false);
-
-    // ✅ Chrome mobile arguments
-    List<String> chromeArgs = new ArrayList<>();
-    if (isMobile) {
-      chromeArgs.add("--window-size=375,812");
-      chromeArgs.add("--user-agent=Mozilla/5.0 (iPhone; CPU iPhone OS 14_0 like Mac OS X) "
-          + "AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1");
-    }
-
-    ChromeOptions options = new ChromeOptions();
-    options.setBrowserVersion("116.0");
     options.setCapability("selenoid:options", selenoidOptions);
-    if (!chromeArgs.isEmpty()) {
-      options.addArguments(chromeArgs);
+
+    options.addArguments("--disable-dev-shm-usage");
+    options.addArguments("--no-sandbox");
+    options.addArguments("--disable-gpu");
+    options.addArguments("--disable-software-rasterizer");
+    options.addArguments("--remote-allow-origins=*");
+    options.addArguments("--disable-blink-features=AutomationControlled");
+
+    if (isMobile) {
+      options.addArguments("--window-size=375,812");
+      options.addArguments("--user-agent=Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X)");
+    } else {
+      options.addArguments("--window-size=1920,1080");  // Use full HD screen
     }
 
-    // ✅ Վերադարձնում ենք՝ pointing to Selenoid
-    return new RemoteWebDriver(URI.create("http://localhost:4444/wd/hub").toURL(), options);
+    RemoteWebDriver driver = new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"), options);
+    driver.manage().timeouts().pageLoadTimeout(Duration.ofSeconds(60));
 
+    driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(15));
+    return driver;
   }
-
-
 }
